[package]
name = "sudoku-lib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sudoku-lib"
path = "src/main.rs"

[lib]
name = "sudoku_lib"
crate-type = ["cdylib"]


[dependencies]
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[profile.release]
#![allow(dead_code)]
opt-level = 3
lto = true
codegen-units = 1

