[package]
name = "lib-sudoku"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lib-sudoku"
path = "src/main.rs"

[lib]
name = "lib_sudoku"
crate-type = ["cdylib"]


[dependencies]
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[profile.release]
#![allow(dead_code)]
opt-level = 3
lto = true
codegen-units = 1

