[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lib_sudoku"
version = "2.1.2"
requires-python = ">=3.8"
description = "A blazing fast sudoku library buit in rust"
readme = "README.md"

[tool.maturin]
include = ["*.pyi", "__init__.py"]

[project.urls]
"Homepage" = "https://github.com/shaggysa/lib_sudoku"
"Source Code" = "https://github.com/shaggysa/lib_sudoku"
"Issues" = "https://github.com/shaggysa/lib_sudoku/issues"